--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "firebase": "^9.14.0",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
